--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+ext {
+    anylinesdk_version = "39.0.0"
+}
+
 android {
     compileSdk 32
 
@@ -32,6 +36,8 @@ android {
 }
 
 dependencies {
+
+    implementation "io.anyline:anylinesdk:$anylinesdk_version"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
