--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://anylinesdk.blob.core.windows.net/maven/'}
     }
 }
 rootProject.name = "Anyline Livecoding"
