Add Timber, MainApplication

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 ext {
     anylinesdk_version = "39.0.0"
+    timber_version = "5.0.1"
 }
 
 android {
@@ -43,6 +44,8 @@ android {
 dependencies {
 
     implementation "io.anyline:anylinesdk:$anylinesdk_version"
+
+    implementation "com.jakewharton.timber:timber:$timber_version"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
