--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ captures/
 .idea/navEditor.xml
 
 .idea/misc.xml
+.idea/deploymentTargetDropDown.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
