--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.anyline.anylinelivecoding"
+        applicationId "io.anyline.examples"
         minSdk 21
         targetSdk 32
         versionCode 1
